@@ -59,7 +59,7 @@ has template_name => (
     isa      => 'Str',
     required => 1,
     lazy     => 1,
-    default  => sub { shift->sqitch->_engine },
+    default  => sub { shift->sqitch->engine_key },
 );
 
 has with_scripts => (
